# stickynotes

./: .gitignore  Makefile  Makefile.in  README  application.c  application.h  backup-stickynotes  backup-stickynotes.1  compat.h  configure.ac  indicator.c  indicator.h  main.c  properties.c  properties.h  stickynote.c  stickynote.h
data/: com.vlastavesely.stickynotes.gschema.xml  stickynotes.desktop.in
data/res/: properties.ui  stickynote.ui  stylesheet.css
res/: properties.ui  resources.xml  stickynote.ui  stylesheet.css
